v-0.8 : 2020-??-??
 - tiny improvements of code and directory structure; added some sample
   traffic recrodings
 - make sure ./results and $SLAVE_HOSTCONFIG files exist (and that ./results is a directory)

v-0.7 : 2020-03-07
 - initial upload to GitHub
