@@ -1,7 +1,9 @@
 v-0.8 : 2020-??-??
  - tiny improvements of code and directory structure; added some sample
    traffic recrodings
- - make sure ./results and $SLAVE_HOSTCONFIG files exist (and that ./results is a directory)
+ - make sure ./results, $SLAVE_SCRIPT and $SLAVE_HOSTCONFIG files exist
+   (and that ./results is a directory)
+ - add kappa framelen+IAT versions that support multiple window sizes
 
 v-0.7 : 2020-03-07
  - initial upload to GitHub
